<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BoostedLERW</string>
    <string name="ble_not_supported">BLE not supported on this device</string>
    <string name="bt_unavailable">Bluetooth unavailable</string>
    <string name="bt_disabled">Bluetooth disabled, turn on and restart</string>
    <!-- Scan -->
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <!-- Device -->
    <string name="read_board_name">Board Name</string>
    <string name="read_light_state">Light State</string>
    <string name="read_manufacturer_name">Read Manufacturer Name</string>
    <string name="read_serial_number">Read Serial Number</string>
    <string name="read_esc_firmware_number">Read Firmware Number</string>
    <string name="read_battery_firmware_number">Read Battery Firmware</string>
    <string name="read_battery_state_number">Charging State</string>
    <string name="read_battery_level_number">Charge Level</string>
    <string name="read_battery_type_number">Read Battery Type</string>
    <string name="write_hyper_level">Write Hyper</string>
    <string name="write_alert_level">Write Expert</string>
    <string name="write_eco_level">Write Eco</string>
    <string name="write_turtle_level">Write Turtle</string>
    <string  name="read_odometer_number">Odometer</string>
    <string name="read_ride_state_number">Current Ride Mode </string>
    <string name="testing_name">Test area</string>
    <string name="switch_activity_name">Switch Activity View</string>
    <string name="toggle_light_state_name">Headlight Toggle - Tap Light State if not working</string>


    <string name="update_activities_id" type="id">Sync</string>


    <string name="battery_label">Battery</string>
    <string name="ride_mode_label">Ride Mode</string>
    <string name="beams_label">Beams</string>
</resources>