<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceActivityTesting">

    <Button
        android:id="@+id/switch_activity_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_manufacturer_name_button"
        android:layout_marginBottom="101dp"
        android:text="@string/switch_activity_name" />

    <Button
        android:id="@+id/read_board_name_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_manufacturer_name_button"
        android:layout_marginBottom="2dp"
        android:text="@string/read_board_name" />




    <Button
        android:id="@+id/read_manufacturer_name_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_serial_number_button"
        android:layout_marginBottom="1dp"
        android:text="@string/read_manufacturer_name" />

    <Button
        android:id="@+id/read_serial_number_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_esc_firmware_button"
        android:layout_marginBottom="-1dp"
        android:text="@string/read_serial_number" />

    <Button
        android:id="@+id/read_battery_firmware_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_battery_type_button"
        android:text="@string/read_battery_firmware_number" />

    <Button
        android:id="@+id/read_battery_state_button"
        android:layout_width="207dp"
        android:layout_height="77dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/read_battery_level_button"
        android:text="@string/read_battery_state_number" />

    <Button
        android:id="@+id/read_battery_level_button"
        android:layout_width="205dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/read_battery_level_number" />

    <Button
        android:id="@+id/read_battery_type_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_battery_state_button"
        android:layout_marginBottom="0dp"
        android:text="@string/read_battery_type_number" />
    <Button
        android:id="@+id/read_esc_firmware_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_battery_firmware_button"
        android:layout_marginBottom="2dp"
        android:text="@string/read_esc_firmware_number" />




</RelativeLayout>