<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceActivity">


    <Button
        android:id="@+id/switch_activity_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_light_state_button"
        android:layout_marginBottom="110dp"
        android:text="@string/switch_activity_name" />

    <Button
        android:id="@+id/read_board_name_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_odometer_button"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="74dp"
        android:text="@string/read_board_name" />

    <Button
        android:id="@+id/read_light_state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_odometer_button"
        android:layout_marginBottom="123dp"
        android:text="@string/read_light_state" />

    <Button
        android:id="@+id/read_battery_state_button"
        android:layout_width="204dp"
        android:layout_height="76dp"
        android:layout_above="@+id/read_odometer_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@+id/read_battery_level_button"
        android:text="@string/read_battery_state_number" />

    <Button
        android:id="@+id/read_battery_level_button"
        android:layout_width="207dp"
        android:layout_height="76dp"
        android:layout_above="@+id/read_odometer_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/read_battery_level_number" />

    <Button
        android:id="@+id/write_alert_level_button"
        android:layout_width="237dp"
        android:layout_height="118dp"
        android:layout_above="@+id/read_ride_state_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/write_eco_level_button"
        android:text="@string/write_alert_level" />

    <Button
        android:id="@+id/write_eco_level_button"
        android:layout_width="171dp"
        android:layout_height="117dp"
        android:layout_above="@+id/read_ride_state_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="0dp"
        android:text="@string/write_eco_level" />

    <Button
        android:id="@+id/read_odometer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/write_alert_level_button"
        android:layout_marginBottom="1dp"
        android:text="@string/read_odometer_number" />

    <Button
        android:id="@+id/read_ride_state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:text="@string/read_ride_state_number" />
</RelativeLayout>